Added product insert page

--- a/core/src/main/conf/database.properties
+++ b/core/src/main/conf/database.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=org.postgresql.Driver
 jdbc.url=jdbc:postgresql://localhost:5432/ShopingCart
 jdbc.username=ShoppingCartOwner
-jdbc.password=moon03dt12
+jdbc.password=tck24m
