--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,12 @@
             </dependency>
 
             <dependency>
+                <groupId>ru.perm</groupId>
+                <artifactId>KefirBB</artifactId>
+                <version>0.6</version>
+            </dependency>
+
+            <dependency>
                 <groupId>org.apache.wicket</groupId>
                 <artifactId>wicket-spring-annot</artifactId>
                 <version>1.3.6</version>
