--- a/core/pom.xml
+++ b/core/pom.xml
@@ -104,7 +104,14 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+        </dependency>
+
     </dependencies>
+
 
     <repositories>
         <repository>
