--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,12 @@
                 </exclusions>
             </dependency>
 
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-orm</artifactId>
+                <version>3.1.0.RELEASE</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 </project>
