Finished refactoring of the add new  product logic. Stable

--- a/web/pom.xml
+++ b/web/pom.xml
@@ -69,7 +69,11 @@
         <dependency>
             <groupId>ru.perm</groupId>
             <artifactId>KefirBB</artifactId>
+        </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
         </dependency>
 
     </dependencies>
